--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--https://www.w3schools.com/tags/tag_meta.asp-->
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -20,11 +19,11 @@
                 <div class="logo">
                     <img src="./img/logo.png" />
                 </div>
-                <div class="header1-right">
+                <div class="redes-sociais">
                     <ul>
                         <li>
                             <img src="./img/rss.png" />
-                            <a href="">Suport
+                            <a href="">Suporte
                             </a>
                         </li>
                         <li>
@@ -59,23 +58,69 @@
                 </ul>
             </div>
             <div class="busca">
-                <input placeholder="Pesquisar" type="text" />
+                <input placeholder="Procure por algo" type="text" />
             </div>
         </div>
     </main>
-    <div class="main-div">
-        <div class="home">
-            <div class="main-txt">
-                <h1 class="dino-text">Dino Dino</h1>
-                <p class="dino-slogan">Um bot BR que deixará o seu Discord muito melhor!</p>
+    <div class="col-100">
+        <div class="content texto-destaque">
+            <h1><strong>Dino Dino</strong></h1>
+            <p>Um bot BR que deixará o seu Discord muito melhor!</p>
+
+            <div class="col-3 bloco-texto">
+                <img alt="Imagem bot" title="Imagem bot" src="./img/content-1.png">
+                <H3>Imagem 1</H3>
+                </p>
             </div>
-            <div class="invite">
-                <a class="invite-text" href="www.google.com">Invite</a>
+
+            <div class="invite col-2" style="margin-top: 1%;">
+                <a href="www.google.com"><img alt="Botão invite" title="Botão invite" src="./img/content-2.png"></a>
+            </div>
+
+            <div class="col-3 bloco-texto">
+                <img alt="Imagem bot" title="Imagem bot" src="./img/content-3.png">
+                <h3>Imagem 2</h3>
             </div>
         </div>
     </div>
     <footer>
-
+        <div class="col-100 footer">
+            <div class="content">
+                <div class="col-4">
+                    <img src="./img/content-3.png" />
+                </div>
+                <div class="col-4">
+                    <h3><b></b></h3>
+                    <p>
+                </div>
+                <div class="col-4">
+                    <h3><b></b></h3>
+                    <p>
+                    </p>
+                </div>
+                <div class="col-4">
+                    <h3><b></b></h3>
+                    <p>
+                        Lorem Ipsum is simply dummy
+                        of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        text ever since.
+                    </p>
+                    <p class="local">Texas, US
+                    <p>
+                    <p class="emailico">email@email.com
+                    <p>
+                    <p class="telefoneico">890-09880-45590
+                    <p>
+                </div>
+            </div>
+        </div>
+        <div class="col-100 footer-2">
+            <div class="content">
+                <p>
+                    Copyright © 2021 Dino Dino
+                </p>
+            </div>
+        </div>
     </footer>
 </body>
 
