--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="pt-br">
 
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=PT+Serif&family=Secular+One&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,114 +19,40 @@
 </head>
 
 <body>
-    <header class="menu-principal">
-        <main>
-            <div class="header-1">
-                <div class="logo">
-                    <img src="./img/logo.png" />
-                </div>
-                <div class="redes-sociais">
-                    <ul>
-                        <li>
-                            <img src="./img/rss.png" />
-                            <a href="">Suporte
-                            </a>
-                        </li>
-                        <li>
-                            <img src="./img/face.png" />
-                            <a href="">Login
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </main>
+    <nav>
+        <a href="#topo"><img src="./img/logo.png" /></a>
+        <ul>
+            <li>
+                <a href="#Comandos">Comandos</a>
+            </li>
+            <li>
+                <a href="#FAQ">FAQ</a>
+            </li>
+            <li>
+                <a href="#Blog">Blog</a>
+            </li>
+            <li>
+                <a href="#Store">Store</a>
+            </li>
+            <li>
+                <a href="#Itens">Itens</a>
+            </li>
+            <li>
+                <a href="#Suporte">Suporte</a>
+            </li>
+            <li>
+                <a href="#Login">Login</a>
+            </li>
+        </ul>
+    </nav>
+    <header id="main">
+        <h1><strong>Dino Dino</strong></h1>
+        <p>Um bot BR que deixará o seu Discord muito melhor!</p>
+        <a href="#invite" class="botao"> Invite
+        </a>
     </header>
-    <main class="col-100 menu-urls">
-        <div class="header-2">
-            <div class="menu">
-                <ul>
-                    <li>
-                        <a href="">Comandos</a>
-                    </li>
-                    <li>
-                        <a href="">FAQ</a>
-                    </li>
-                    <li>
-                        <a href="">Blog</a>
-                    </li>
-                    <li>
-                        <a href="">Store</a>
-                    </li>
-                    <li>
-                        <a href="">Itens</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="busca">
-                <input placeholder="Procure por algo" type="text" />
-            </div>
-        </div>
-    </main>
-    <div class="col-100">
-        <div class="content texto-destaque">
-            <h1><strong>Dino Dino</strong></h1>
-            <p>Um bot BR que deixará o seu Discord muito melhor!</p>
-
-            <div class="col-3 bloco-texto">
-                <img alt="Imagem bot" title="Imagem bot" src="./img/content-1.png">
-                <H3>Imagem 1</H3>
-                </p>
-            </div>
-
-            <div class="invite col-2" style="margin-top: 1%;">
-                <a href="www.google.com"><img alt="Botão invite" title="Botão invite" src="./img/content-2.png"></a>
-            </div>
-
-            <div class="col-3 bloco-texto">
-                <img alt="Imagem bot" title="Imagem bot" src="./img/content-3.png">
-                <h3>Imagem 2</h3>
-            </div>
-        </div>
-    </div>
     <footer>
-        <div class="col-100 footer">
-            <div class="content">
-                <div class="col-4">
-                    <img src="./img/content-3.png" />
-                </div>
-                <div class="col-4">
-                    <h3><b></b></h3>
-                    <p>
-                </div>
-                <div class="col-4">
-                    <h3><b></b></h3>
-                    <p>
-                    </p>
-                </div>
-                <div class="col-4">
-                    <h3><b></b></h3>
-                    <p>
-                        Lorem Ipsum is simply dummy
-                        of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
-                        text ever since.
-                    </p>
-                    <p class="local">Texas, US
-                    <p>
-                    <p class="emailico">email@email.com
-                    <p>
-                    <p class="telefoneico">890-09880-45590
-                    <p>
-                </div>
-            </div>
-        </div>
-        <div class="col-100 footer-2">
-            <div class="content">
-                <p>
-                    Copyright © 2021 Dino Dino
-                </p>
-            </div>
-        </div>
+        <p>Copyright © 2021 Dino Dino</p>
     </footer>
 </body>
 
