--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-
+    <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=PT+Serif&family=Secular+One&display=swap"
@@ -58,6 +58,7 @@
 
     <div class="col-100">
         <div class="content texto-destaque">
+            <h3>Site em desenvolvimento!</h3>
             <h1><strong>Dino Dino</strong></h1>
             <p>Um bot BR que deixará o seu Discord muito melhor!</p>
             <a href="https://discord.com/api/oauth2/authorize?client_id=865016203726028851&permissions=8&scope=bot"
@@ -69,7 +70,7 @@
         <div class="col-100 footer">
             <div class="content">
                 <div class="col-4">
-                    <img alt="logo" title="Logo" src="./img/content-3.png" />
+                    <img alt="logo" title="Logo" src="./img/logo.png" />
                 </div>
                 <div class="col-4">
                     <p>
