--- a/index.html
+++ b/index.html
@@ -2,98 +2,130 @@
 <html lang="pt-br">
 
 <head>
-    <link rel="shortcut icon" href="./img/favicon.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=PT+Serif&family=Secular+One&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="keywords" content="Bot, Discord, Python, JScript, CSS, HMTL">
-    <meta name="description" content="Página do bot do Discord Dino Dino">
-    <meta name="author" content="Victor Vieira dos Santos">
-    <title> Dino Dino BOT</title>
+  <!--meta-->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="keywords" content="Bot, Discord, Python, JScript, CSS, HMTL" />
+  <meta name="description" content="Página do bot do Discord Dino Dino" />
+  <meta name="author" content="Victor Vieira dos Santos" />
+  <!--icon-->
+  <link rel="shortcut icon" href="./img/favicon.png">
+  <!--css-->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.css" />
+
+  <title>Dino Dino BOT</title>
 </head>
 
 <body>
-    <header class="menu-principal">
-        <main>
-            <div class="header-1">
-                <div class="logo">
-                    <img src="./img/logo.png" />
-                </div>
-                <div class="redes-sociais">
-                    <ul>
-                        <li>
-                            <a href="#">Comandos</a>
-                        </li>
-                        <li>
-                            <a href="#">FAQ</a>
-                        </li>
-                        <li>
-                            <a href="#">Blog</a>
-                        </li>
-                        <li>
-                            <a href="#">Store</a>
-                        </li>
-                        <li>
-                            <a href="#">Itens</a>
-                        </li>
-                        <li>
-                            <a href="#">Suporte
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">Login
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </main>
-    </header>
-
-    <div class="col-100">
-        <div class="content texto-destaque">
-            <h3>Site em desenvolvimento!</h3>
-            <h1><strong>Dino Dino</strong></h1>
-            <p>Um bot BR que deixará o seu Discord muito melhor!</p>
-            <a href="https://discord.com/api/oauth2/authorize?client_id=865016203726028851&permissions=8&scope=bot"
-                class="botao"> Invite
-            </a>
+  <!--HEADER-->
+  <div id="header">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light justify-content-between">
+        <a class="navbar-brand">
+          <img src="img/logo.png" class="img-fluid" />
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Comandos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Suporte</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Login</a>
+            </li>
+          </ul>
         </div>
+      </nav>
     </div>
-    <footer>
-        <div class="col-100 footer">
-            <div class="content">
-                <div class="col-4">
-                    <img alt="logo" title="Logo" src="./img/logo.png" />
-                </div>
-                <div class="col-4">
-                    <p>
-                        <a href="#">Termos de Uso</a>
-                    </p>
-                    <p>
-                        Qualquer dúvida entre em contato conosco!
-                    </p>
-                    <p class="local">São Paulo, BR
-                    <p>
-                    <p class="emailico">DinoDinoBotDiscord@gmail.com
-                    <p>
-                </div>
-            </div>
+  </div>
+  <!--//HEADER-->
+
+  <!--SLIDER-->
+  <div id="slider" class="block">
+    <div class="container pt-5">
+      <div class="row">
+        <div class="col-lg-8 col-md-6 align-self-center text-center">
+          <img src="img/dino404.png" class="img-fluid" />
         </div>
-        <div class="col-100 footer-2">
-            <div class="content">
-                <p>
-                    Copyright © 2021 Dino Dino
-                </p>
-            </div>
+        <div class="col-lg-4 col-md-6 align-self-center mb-md-0 mb-4">
+          <h1>Dino Dino</h1>
+          <h4 class="mb-4">Um bot BR que deixará o seu Discord muito melhor!</h4>
+          <a href="https://discord.com/api/oauth2/authorize?client_id=865016203726028851&permissions=8&scope=bot"
+            target="_blank"
+            class="button btn btn-primary button-primary d-md-flex justify-content-center d-block mb-md-0 mb-2 mr-md-2">Invite
+          </a>
         </div>
-    </footer>
+      </div>
+    </div>
+  </div>
+  <!--//SLIDER-->
+
+  <!--FOOTER-->
+  <footer id="contato">
+    <div class="container">
+      <div class="logo py-4">
+        <div class="row">
+          <div class="col-md-6 align-self-center text-md-left text-center">
+            <a href="#">
+              <img src="img/logo.png" class="img-fluid" />
+            </a>
+          </div>
+          <div class="col-md-6 align-self-center text-right">
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/VictorVdoS" target="_blank"><img src="img/facebook.png" /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/VictorVdoS" target="_blank"><img src="img/twitter.png" /></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/victorvdos/" target="_blank"><img src="img/instagram.png" /></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/channel/UCKqiNW_E2a6ZFUPJQgj6VpQ" target="_blank"><img
+                    src="img/youtube.png" /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="logo py-4">
+        <div class="row">
+          <div class="col-lg-8 align-self-center text-md-left text-center">
+            <a href="#">Copyright © 2021 Dino Dino</a>
+          </div>
+          <div class="col-lg-4 align-self-center text-right">
+            <ul>
+              <li>
+                <a href="#">Termos de Uso</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!--//FOOTER-->
+
+  <!--JS-->
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
