--- a/comandos.html
+++ b/comandos.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="comandos.html">Comandos</a>
+              <a class="nav-link active" href="#">Comandos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">FAQ</a>
@@ -57,17 +57,87 @@
   <!--SLIDER-->
   <div id="slider" class="block">
     <div class="container pt-5">
-      <div class="row">
-        <div class="col-lg-8 col-md-6 align-self-center text-center">
-          <img src="img/dino404.png" class="img-fluid" />
+      <h2>COMANDOS</h2>
+      <p>Encontre todas os comandos, incluindo as permissões necessárias, a respeito da extensa lista de comandos
+        disponíveis para você com</p>
+      <ul class="nav nav-tabs">
+        <li><a class="nav-link" data-toggle="tab" href="#adm">ADM</a></li>
+        <li><a class="nav-link" data-toggle="tab" href="#games">Games</a></li>
+        <li><a class="nav-link" data-toggle="tab" href="#info">Info</a></li>
+        <li><a class="nav-link" data-toggle="tab" href="#midia">Midia</a></li>
+        <li><a class="nav-link" data-toggle="tab" href="#outros">Outros</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="adm" class="tab-pane fade in active">
+          <h2>ADM</h2>
+          <p>Comando exclusivos para uso de ADMINISTRADORES!!!</p>
+          <div id="comandos">
+            <h1>.Clear</h1>
+            <p>Comando para excluir linhas, digite: .clear "quantidade de linhas 5"</p>
+          </div>
         </div>
-        <div class="col-lg-4 col-md-6 align-self-center mb-md-0 mb-4">
-          <h1>Dino Dino</h1>
-          <h4 class="mb-4">Um bot BR que deixará o seu Discord muito melhor!</h4>
-          <a href="https://discord.com/api/oauth2/authorize?client_id=865016203726028851&permissions=8&scope=bot"
-            target="_blank"
-            class="button btn btn-primary button-primary d-md-flex justify-content-center d-block mb-md-0 mb-2 mr-md-2">Invite
-          </a>
+        <div id="games" class="tab-pane fade">
+          <h2>Games</h2>
+          <p>Comando para você se divertir forever alone, ou com os amigos S2</p>
+          <div id="comandos">
+            <h1>.8ball</h1>
+            <p>Comando de pergunta, digite .8ball + "e uma frase"</p>
+          </div>
+          <div id="comandos">
+            <h1>.coinflip</h1>
+            <p>Digite .coinflip para jogar uma moeda.</p>
+          </div>
+          <div id="comandos">
+            <h1>.roll</h1>
+            <p>Digite .roll + "quandidade de dados" + d + "tamando do dado"
+              Ex: .roll 2d6
+            </p>
+          </div>
+          <div id="comandos">
+            <h1>.rolldice</h1>
+            <p>Digite .rolldice e o bot te ajudará no resto!</p>
+          </div>
+        </div>
+        <div id="info" class="tab-pane fade">
+          <h2>Informações</h2>
+          <p>Informações do servidor.</p>
+          <div id="comandos">
+            <h1>.DM</h1>
+            <p>Envia uma DM com as principais funcionalidades do bot.</p>
+          </div>
+          <div id="comandos">
+            <h1>.Info</h1>
+            <p>Mostra as informações do servidor</p>
+          </div>
+          <div id="comandos">
+            <h1>.ola</h1>
+            <p>Envia uma mensagem de ola</p>
+          </div>
+          <div id="comandos">
+            <h1>.Ping</h1>
+            <p>Mostra o ms do servidor</p>
+          </div>
+        </div>
+        <div id="midia" class="tab-pane fade">
+          <h2>Reprodutor de Mídia</h2>
+          <p>Comandos expecificos para múscias e vídeos.</p>
+          <div id="comandos">
+            <h1>.youtube</h1>
+            <p>Digite .youtube + "frase" para o bot localizar o video desejado</p>
+          </div>
+        </div>
+        <div id="outros" class="tab-pane fade">
+          <h2>Outros</h2>
+          <p>Alguns comando aleatórios.</p>
+          <div id="comandos">
+            <h1>.changeprefix</h1>
+            <p>Muda o prefixo do bot do servidor.</p>
+          </div>
+          <div id="comandos">
+            <h1>.help</h1>
+            <p>Mostra a lista de comandos</p>
+          </div>
         </div>
       </div>
     </div>
